--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.0",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.4.9",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
